--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Infinity Scroll</title>
     <link rel="stylesheet" href="style.css" />
-    <link
-      rel="image/png"
-      href="https://www.google.com/s2/favicons?domain=css-tricks.com"
-    />
+
     <!-- above you can do this href="https://www.google.com/s2/favicons?domain=your website link"-->
   </head>
   <body>
     <h1>Infinity Scroll</h1>
+    <dic class="loader" id="loader">
+      <img src="Ball@1x-0.5s-200px-200px.svg" alt="loader" />
+    </dic>
+    <div class="image-container" id="image-container"></div>
     <!-- script -->
     <script src="script.js"></script>
   </body>
